--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -350,7 +350,7 @@ navbar:
     - { key: "category", link: "/categories/", icon: "iconfont icon-category-fill" }
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
-    #- { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
@@ -424,7 +424,7 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
-    <a href="https://github.com/YZJenny" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a>
+    <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>github</span></a>
     <i class="iconfont icon-love"></i>
     <a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei Qi</span></a>
   '
@@ -465,7 +465,7 @@ index:
   # 头图高度，屏幕百分比
   # Height ratio of banner image
   # Available: 0 - 100
-  banner_img_height: 75
+  banner_img_height: 90
 
   # 头图黑色蒙版的不透明度，available: 0 - 1.0， 1 是完全不透明
   # Opacity of the banner mask, 1.0 is completely opaque
@@ -789,8 +789,8 @@ gitalk:
 # Based on LeanCloud
 # See: https://valine.js.org/
 valine:
-  appId:
-  appKey:
+  appId: adkgmMmfMC1DMgYcjg960d5a-gzGzoHsz
+  appKey: RTNGcd7iOxYeuwCSRE5LHm2D
   path: window.location.pathname
   placeholder:
   avatar: 'retro'
@@ -996,22 +996,22 @@ links:
   # 友链的成员项
   # Member item of page
   items:
-    - {
-      title: "Fluid Blog",
-      intro: "主题博客",
-      link: "https://hexo.fluid-dev.com/",
-      avatar: "/img/favicon.png"
+    #- {
+     # title: "Fluid Blog",
+    #  intro: "主题博客",
+    #  link: "https://hexo.fluid-dev.com/",
+    #  avatar: "/img/favicon.png"
+    }
+    #- {
+    #  title: "Fluid Docs",
+    # intro: "主题使用指南",
+    #  link: "https://hexo.fluid-dev.com/docs/",
+    #  avatar: "/img/favicon.png"
     }
     - {
-      title: "Fluid Docs",
-      intro: "主题使用指南",
-      link: "https://hexo.fluid-dev.com/docs/",
-      avatar: "/img/favicon.png"
-    }
-    - {
-      title: "Fluid Repo",
+      title: "github",
       intro: "主题 GitHub 仓库",
-      link: "https://github.com/fluid-dev/hexo-theme-fluid",
+      link: "https://github.com/leiqichn",
       avatar: "/img/favicon.png"
     }
 
@@ -1028,7 +1028,7 @@ links:
   # 评论插件
   # Comment plugin
   comments:
-    enable: false
+    enable: valine
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis | giscus
