--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"name":"Lei Qi's Blog","short_name":"Lei Qi","theme_color":"white","background_color":"white","display":"standalone","scope":"/","start_url":"/","icons":[{"src":"/img/CLlogo.jpg","sizes":"128x128","type":"image/jpg"},{"src":"/img/CLlogo.jpg","sizes":"512x512","type":"image/jpg"}]}
+{"name":"Lei Qi's Blog","short_name":"Lei Qi","theme_color":"white","background_color":"white","display":"standalone","scope":"/","start_url":"/","icons":[{"src":"img/CLlogo.jpg","sizes":"128x128","type":"image/jpg"},{"src":"img/CLlogo.jpg","sizes":"512x512","type":"image/jpg"}]}
