--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -351,6 +351,7 @@ navbar:
     - { key: "tag", link: "/tags/", icon: "iconfont icon-tags-fill" }
     - { key: "about", link: "/about/", icon: "iconfont icon-user-fill" }
     - { key: "links", link: "/links/", icon: "iconfont icon-link-fill" }
+    - { key: "rss", link: "/atom.xml", icon: "iconfont icon-rss-fill" }
 
 # 搜索功能，基于 hexo-generator-search 插件，若已安装其他搜索插件请关闭此功能，以避免生成多余的索引文件
 # Search feature, based on hexo-generator-search. If you have installed other search plugins, please disable this feature to avoid generating redundant index files
@@ -440,7 +441,7 @@ footer:
     pv_format: "总访问量 {} 次"  # 显示的文本，{}是数字的占位符（必须包含)，下同
     uv_format: "总访客数 {} 人"
   icons:
-        - { class: "iconfont icon-rss-fill", link: "https://leiqichn.github.io/atom.xml", tip: "订阅RSS" }
+    - { class: "iconfont icon-rss-fill", link: "https://leiqichn.github.io/atom.xml", tip: "订阅RSS" }
   # 国内大陆服务器的备案信息
   # For Chinese mainland website policy, other areas keep disable
   beian:
