--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -425,10 +425,10 @@ footer:
   # 页脚第一行文字的 HTML，建议保留 Fluid 的链接，用于向更多人推广本主题
   # HTML of the first line of the footer, it is recommended to keep the Fluid link to promote this theme to more people
   content: '
-    <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved.</a>'
-        #<i class="iconfont icon-love"></i>
-    #<a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Lei #Qi</span></a>
-
+    <a href="https://github.com/" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved.</a> <br />
+        <i class="iconfont con-rss-fill"></i>
+    <a href="https://leiqichn.github.io/atom.xml" target="_blank" rel="nofollow noopener"><span>点击RSS订阅</span></a>
+    '
   # 展示网站的 PV、UV 统计数
   # Display website PV and UV statistics
   statistics:
