--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -959,7 +959,7 @@ about:
   icons:
     - { class: "iconfont icon-github-fill", link: "https://github.com/leiqichn", tip: "GitHub" }
     - { class: "iconfont icon-rss-fill", link: "https://leiqichn.github.io/atom.xml", tip: "订阅RSS" }
-    - { class: "iconfont icon-wechat-fill", qrcode: "/imgs/qrcode.png" }
+    - { class: "iconfont icon-wechat-fill", qrcode: "/imgs/qrcode.jpg" }
 
 
 #---------------------------
