--- a/source/manifest.json
+++ b/source/manifest.json
@@ -10,26 +10,22 @@
         {
             "src": "imgs/icon-192x192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "maskable"
+            "type": "image/png"
         },
         {
             "src": "imgs/icon-256x256.png",
             "sizes": "256x256",
-            "type": "image/png",
-            "purpose": "maskable"
+            "type": "image/png"
         },
         {
             "src": "imgs/icon-384x384.png",
             "sizes": "384x384",
-            "type": "image/png",
-            "purpose": "maskable"
+            "type": "image/png"
         },
         {
             "src": "imgs/icon-512x512.png",
             "sizes": "512x512",
             "type": "image/png"
-            "purpose": "maskable"
         }
     ]
 }
