--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -1096,3 +1096,7 @@ static_prefix:
   twikoo: https://lib.baomitu.com/twikoo/1.6.8/
 
   hint: https://lib.baomitu.com/hint.css/2.7.0/
+  custom_head: '
+<link rel="manifest" href="/manifest.json">
+<script src="/sw-register.js"></script>
+'
