--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build something requiring NASM
         run: |
-          cd /home/runner/work/leiqichn.github.io/leiqichn.github.io
+          cd /home/runner/work
           cmake -G Ninja . && ninja
    
 
