--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build something requiring NASM
         run: |
-          cd /home/runner/work
+          cd /home/runner/nasm/nasm-2\.15\.05/third_party/boringssl
           cmake -G Ninja . && ninja
    
 
