--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -11,8 +11,6 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: ilammy/setup-nasm@v1
-      - uses: actions/checkout@v2
       - name: Use Node.js 18.x
         uses: actions/setup-node@v2
         with:
@@ -27,6 +25,7 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
+        uses: ilammy/setup-nasm@v1
         run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
