--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -17,6 +17,7 @@ jobs:
           node-version: "18"
       - name: Cache NPM dependencies
         uses: actions/cache@v2
+        uses: ilammy/setup-nasm@
         with:
           path: node_modules
           key: ${{ runner.OS }}-npm-cache
@@ -25,7 +26,6 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Build
-        uses: ilammy/setup-nasm@v1
         run: npm run build
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
