--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -25,6 +25,7 @@ jobs:
             ${{ runner.OS }}-npm-cache
       - name: Install Dependencies
         run: npm install
+      - uses: ilammy/setup-nasm@v1
       - name: Build
         run: npm run build
       - name: Deploy
