--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: actions/checkout@v2
       - name: Use Node.js 18.x
         uses: actions/setup-node@v2
         with:
