--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -11,6 +11,7 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: ilammy/setup-nasm@v1
       - uses: actions/checkout@v2
       - name: Use Node.js 18.x
         uses: actions/setup-node@v2
@@ -23,6 +24,8 @@ jobs:
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
             ${{ runner.OS }}-npm-cache
+      - name: Install nasm
+        run: apt install libpng-dev libtool automake autoconf nasm pkg-config
       - name: Install Dependencies
         run: npm install
       - name: Build
