--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -25,7 +25,7 @@ jobs:
           restore-keys: |
             ${{ runner.OS }}-npm-cache
       - name: Install nasm
-        run: apt install libpng-dev libtool automake autoconf nasm pkg-config
+        uses: ilammy/setup-nasm@v1
       - name: Install Dependencies
         run: npm install
       - name: Build
