--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.1.0-rc1"
+    "version": "4.1.1"
   },
   "dependencies": {
     "any-promise": "^1.3.0",
