--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.1.1"
+    "version": "7.0.0-rc1"
   },
   "dependencies": {
     "any-promise": "^1.3.0",
@@ -21,7 +21,7 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-tag": "^2.0.0",
     "hexo-neat": "^1.0.9",
-    "hexo-pwa": "^0.1.3",
+    "hexo-pwa": "git+https://github.com/leiqichn/hexo-pwa.git",
     "hexo-renderer-ejs": "^2.0.0",
     "hexo-renderer-marked": "^6.0.0",
     "hexo-renderer-stylus": "^2.1.0",
