--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -18,14 +18,14 @@
 
 # 用于浏览器标签的图标
 # Icon for browser tab
-favicon: /img/CLlogo.jpg
+favicon: /img/CLlogo.jpeg
 custom_head: '
 <link rel="manifest" href="/manifest.json">
 <script src="/sw-register.js"></script>
 '
 # 用于苹果设备的图标
 # Icon for Apple touch
-apple_touch_icon: /img/CLlogo.jpg
+apple_touch_icon: /img/CLlogo.jpeg
 
 # 浏览器标签页中的标题分隔符，效果： 文章名 - 站点名
 # Title separator in browser tab, eg: article - site
