--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -432,7 +432,7 @@ footer:
     <a href="https://leiqicn.gitee.io" target="_blank" rel="nofollow noopener"><span>Copyright ©Lei Qi 2022-2023. All right reserved.</a> <br />
     <a href="https://leiqicn.gitee.io" target="_blank" rel="nofollow noopener"><span>国内加速网站访问</span></a> <br />
         <i class="iconfont icon-rss-fill"></i>
-    <a href="https://leiqichn.github.io/atom.xml" target="_blank" rel="nofollow noopener"><span>点击RSS订阅</span></a><a href="https://leiqichn.github.io/atom.xml" target="_blank" rel="nofollow noopener"><span> Power By Hexo-Fluid</span></a>
+    <a href="https://leiqichn.github.io/atom.xml" target="_blank" rel="nofollow noopener"><span>点击RSS订阅</span></a><a href="https://leiqichn.github.io/atom.xml" target="_blank" rel="nofollow noopener"><span> Powered By Hexo-Fluid</span></a>
 
     '
   # 展示网站的 PV、UV 统计数
