--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: hexo-theme-butterfly-4-7-0
+theme: fluid_19
 #fluid_19
 # hexo-theme-butterfly-4-7-0
 # Deployment
