--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -27,6 +27,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: change mod
+        run: chmod +x /usr/local/bin/hexo
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
