--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -27,8 +27,12 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: change mod
-        run: chmod +x /usr/local/bin/hexo
+      - name: Install dependencies
+        run: npm ci
+      - name: Add hexo to PATH
+        run: echo 'export PATH="/usr/local/lib/node_modules/hexo-cli/bin:$PATH"' >> $GITHUB_ENV
+      - name: Generate static files with Hexo
+        run: hexo generate
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
