--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -437,7 +437,7 @@ footer:
 
     	<a href="https://github.com/leiqichn" target="_blank" rel="nofollow noopener"><span>Github | </span></a>
       <a href="https://blog.csdn.net/lei_qi" target="_blank" rel="nofollow noopener"><span>CSDN | </span></a>
-      <a href="mailto:leiqi@m.fudan.edu.cn" target="_blank" rel="nofollow noopener"><span>Email | </span></a>
+      <a href="mailto:leiqi@fudan.edu.cn" target="_blank" rel="nofollow noopener"><span>Email | </span></a>
       <a href="/imgs/qrcode.jpg" target="_blank" rel="nofollow noopener"><span>微信</span></a>
 
 
