feat: 评论必须输入昵称和邮箱

--- a/themes/fluid_19/_config.yml
+++ b/themes/fluid_19/_config.yml
@@ -829,7 +829,7 @@ valine:
   placeholder: '点击这里输入你的真知灼见吧！输入邮箱后支持评论回复邮件通知哦！支持MarkDown语法~~~ PS: 在昵称框输入QQ号可自动获取QQ昵称和QQ头像哦！期待你的精彩评论！'
   avatar: ''
   meta: ['nick', 'mail']
-  requiredFields: ['nick'] #设置必填项
+  requiredFields: ['nick', 'mail'] #设置必填项
   pageSize: 10
   lang: 'zh-CN'
   highlight: false
