--- a/.github/workflows/papes.yml
+++ b/.github/workflows/papes.yml
@@ -17,12 +17,14 @@ jobs:
         with:
           node-version: "18"
       - name: Cache NPM dependencies
-        uses: actions/cache@v2
+      
+        uses: actions/cache@v4
         with:
           path: node_modules
-          key: ${{ runner.OS }}-npm-cache
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.OS }}-npm-cache
+            ${{ runner.os }}-npm-
+            
       - name: Install Dependencies
         run: npm install
       - name: Add execute permission to hexo command
