feat: 更新 _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -102,11 +102,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme: fluid_19
+# butterfly
 # fluid_19
-# hexo-theme-butterfly-4-7-0
-# fluid_19
-# hexo-theme-butterfly-4-7-0
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
