--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: butterfly
+theme: fluid_19
 # butterfly
 # fluid_19
 # Deployment
