--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -485,7 +485,7 @@ math:
 search:
   # Choose: algolia_search / local_search / docsearch
   # leave it empty if you don't need search
-  use: algolia_search
+  use:
   placeholder:
 
   # Algolia Search
