feat: 添加主页个性签名

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -177,7 +177,10 @@ subtitle:
   source: false
   # If you close the typewriter effect, the subtitle will only show the first line of sub
   sub:
-    – 顺势而为
+    - "代码如诗，逻辑如歌"
+    - "Stay hungry, stay foolish"
+    - "Hello, World!"
+    - "顺势而为"
 
 # Article layout on the homepage
 # 1: Cover on the left, info on the right
