--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "css": "^3.0.0",
     "exec-series": "^1.0.3",
     "hexo": "^7.0.0-rc1",
+    "hexo-algolia": "^1.3.2",
     "hexo-browsersync": "^0.3.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
@@ -23,6 +24,7 @@
     "hexo-generator-index": "^3.0.0",
     "hexo-generator-index-custom": "^1.0.1",
     "hexo-generator-json-content": "^4.2.3",
+    "hexo-generator-searchdb": "^1.5.0",
     "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^2.0.0",
     "hexo-hide-posts": "^0.4.3",
