feat: 支持在线编辑文章

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -240,7 +240,7 @@ post_edit:
   enable: true
   # url: https://github.com/user-name/repo-name/edit/branch-name/subdirectory-name/
   # For example: https://github.com/jerryc127/butterfly.js.org/edit/main/source/
-  url: https://github.com/leiqichn/leiqichn.github.io/edit/master/source
+  url: https://github.com/leiqichn/leiqichn.github.io/edit/master/source/
 
 # Related Articles
 related_post:
