--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -327,7 +327,10 @@ aside:
       link: https://github.com/leiqichnchn
   card_announcement:
     enable: true
-    content: 欢迎关注公众号：DeepThinking深思，本站的文章会同步发布在微信公众号，方便推送~
+    content: 欢迎关注公众号：DeepThinking深思，本站的文章会同步发布在微信公众号，方便推送~ 
+      <div class="aside-qrcode">
+      <a href="https://mp.weixin.qq.com/s/xbvKNdVUmhiyjkbvdMIzcQ" rel="external nofollow noreferrer" target="_blank"><img src="/imgs/qrcode.jpg" data-lazy-src="/imgs/qrcode.jpg" title="" data-ll-status="loaded" class="entered loaded" style=""></a>
+      </div>
   card_recent_post:
     enable: true
     # If set 0 will show all
