--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -615,18 +615,8 @@ valine:
   serverURLs: https://leiqi.top
   bg:
   # Use Valine visitor count as the page view count
-  visitor: true
+  visitor: false
   option:
-  placeholder: '点击这里输入你的真知灼见吧！输入邮箱后支持评论回复邮件通知哦！支持MarkDown语法~~~ PS: 在昵称框输入QQ号可自动获取QQ昵称和QQ头像哦！期待你的精彩评论！'
-  meta: [ 'nick', 'mail' ]
-  requiredFields: [ 'nick', 'mail' ] #设置必填项
-  pageSize: 10
-  lang: 'zh-CN'
-  highlight: false
-  recordIP: true
-  emojiCDN:
-  emojiMaps:
-  enableQQ: true
 
 # Waline - A simple comment system with backend support fork from Valine
 # https://waline.js.org/
