--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -573,7 +573,7 @@ comments:
   # If you set it to true, the comment count will be invalid
   lazyload: false
   # Display comment count in post's top_img
-  count: false
+  count: true
   # Display comment count in Home Page
   card_post_count: false
 
@@ -609,17 +609,18 @@ gitalk:
 # Valine
 # https://valine.js.org
 valine:
+  enable: true
   appId: adkgmMmfMC1DMgYcjg960d5a-gzGzoHsz
   appKey: RTNGcd7iOxYeuwCSRE5LHm2D
+  placeholder: '点击这里输入你的真知灼见吧！输入邮箱后，支持他人评论你时，邮件通知你哦！支持MarkDown语法~ PS: 在昵称框输入QQ号可自动获取QQ昵称和QQ头像哦！期待你的精彩评论！'
   avatar: ''
   # This configuration is suitable for domestic custom domain name users, overseas version will be automatically detected (no need to manually fill in)
   serverURLs: ''
   # Use Valine visitor count as the page view count
   visitor: false
   path: window.location.pathname
-  placeholder: '点击这里输入你的真知灼见吧！输入邮箱后支持评论回复邮件通知哦！支持MarkDown语法~~~ PS: 在昵称框输入QQ号可自动获取QQ昵称和QQ头像哦！期待你的精彩评论！'
   meta: [ 'nick', 'mail' ]
-  requiredFields: [ 'nick', 'mail' ] #设置必填项
+  requiredFields: [ 'nick', 'mail' ]
   pageSize: 10
   lang: 'zh-CN'
   highlight: false
