feat: 添加友情链接

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -29,7 +29,7 @@ menu:
     Movie: /movies/ || fas fa-video
   摄影集: /photography/ || fas fa-camera
   RSS: /atom.xml || fas fa-rss-square
-  友链: /link || fas fa-camera
+  友链: /link || fas fa-link
   留言板: /guestbook/ || fas fa-comment-dots
   关于我: /about/ || fas fa-heart
   # Home: / || fas fa-home
