--- a/source/_data/shuoshuo.yml
+++ b/source/_data/shuoshuo.yml
@@ -1,5 +1,5 @@
 - author: LeiQi
-  avatar: https://leiqichn.github.io/imgs/avatar.png
+  avatar: /imgs/avatar.png
   date: 2025-04-12 23:33:26
   key: key-1
   content: |
