feat: add favicon

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -67,7 +67,7 @@ social:
 # Image Settings
 # --------------------------------------
 
-favicon: /img/favicon.png
+favicon: /img/favicon.jpg
 
 avatar:
   img: /img/icon.png
