--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -570,7 +570,7 @@ comments:
   text: true
   # Lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
-  lazyload: false
+  lazyload: true
   # Display comment count in post's top_img
   count: true
   # Display comment count in Home Page
