feat: 网页图片懒加载

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -1042,10 +1042,12 @@ instantpage: false
 # Lazyload
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: false
+  enable: true
+  # Use browser's native lazyload instead of vanilla-lazyload
+  native: false
   # Specify the field to use lazyload (site or post)
   field: site
-  placeholder:
+  placeholder: /img/loading.gif
   blur: false
 
 # PWA
