feat: 取消图片懒加载

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -1042,9 +1042,8 @@ instantpage: false
 # Lazyload
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: true
+  enable: false
   # Use browser's native lazyload instead of vanilla-lazyload
-  native: false
   # Specify the field to use lazyload (site or post)
   field: site
   placeholder: /img/loading.gif
