--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -124,7 +124,7 @@ error_img:
 
 # A simple 404 page
 error_404:
-  enable: false
+  enable: true
   subtitle: 'Page Not Found'
   background: /img/error-page.png
 
