--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -158,7 +158,7 @@ post_meta:
 # The position of site info, eg: 300px/300em/300rem/10%
 index_site_info_top:
 # The height of top_img, eg: 300px/300em/300rem
-index_top_img_height:
+index_top_img_height: 60%
 
 # The subtitle on homepage
 subtitle:
