--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -13,20 +13,24 @@
   link_list:
     - name: CSDN
       link: https://blog.csdn.net/lei_qi/
-      avatar: /imgs/csdn-logo.png
-      descr: 我的CSDN博客
+      avatar: /imgs/CSDN.png
+      descr: "@lei_qi - 我的CSDN博客"
     - name: Github
       link: https://github.com/leiqichn
       avatar: /imgs/github-logo.png
-      descr: 我的GitHub仓库
+      descr: "@leiqichn - 我的GitHub仓库"
     - name: DeepThinking深思
       link: /imgs/qrcode.jpg
-      avatar: /imgs/qrcode.jpg
-      descr: AI知识公众号
+      avatar: /imgs/wexin-logo.png
+      descr: "@DeepThinking深思 - AI知识公众号"
     - name: 小红书
-      link: https://mp.weixin.qq.com/s/xbvKNdVUmhiyjkbvdMIzcQ
+      link: /imgs/xiaohongshu-qrcode.jpg
       avatar: /imgs/xiaohongshu.png
-      descr: 随便拍拍 - 上传生活和摄影作品
+      descr: "@随便拍拍 - 上传生活和摄影作品"
+    - name: Bilibili
+      link: /imgs/bilibili-qrcode.jpg
+      avatar: /imgs/bilibili.png
+      descr: "@八里桥好 - 上传学习作品"
 
 - class_name: '<i class="fas fa-fan" style="color:#00cccc;padding-right: 0.4rem"></i>友情链接'
   class_desc: '<span style="font-style: italic;">最可爱的朋友在这里</span>'
