--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -323,7 +323,7 @@ aside:
       enable: true
       icon: fab fa-github
       text: Follow Me
-      link: https://github.com/leiqichnchn
+      link: https://github.com/leiqichn
   card_announcement:
     enable: true
     content: 欢迎关注公众号：DeepThinking深思，本站的文章会同步发布在微信公众号，方便推送~ 
