feat: 修改网站介绍

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Lei Qi's Blog
 subtitle: 'Lei Qi博客'
-description: 'Lei Qi Blog又名LeiQi论坛/中文网/社区/学习/是基于技术方面：Golang, 云原生，大数据，Linux学习，生活方面：摄影技术学习与分享 为一体的综合性网络博客网站。本博客是非营利性博客，目的在于让各位计算机爱好者通过本博客可以学到自己感兴趣的知识，也是记录自己学习成长的一个平台。'
+description: 'Lei Qi Blog又名LeiQi论坛/中文网/社区/空间。是基于技术方面：Golang, 云原生，大数据，生物信息，Linux学习，生活方面：摄影、经济理论、电影、读书、学习与分享为一体的综合性网络博客网站。本博客是非营利性博客，目的在于与各位编程爱好者和关注我的友友们通过本博客分享自己感兴趣的知识和一点见解。恰巧我爱写，恰巧你看到了，这就是缘分。'
 keywords: golang python 算法 云计算 复旦大学 华为
 author: Lei Qi
 language: zh-CN
