--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -180,6 +180,8 @@ subtitle:
   sub:
     - "代码如诗，逻辑如歌"
     - "顺势而为"
+    - "专注、规划、高效"
+    - "绝知此事要躬行"
 
 # Article layout on the homepage
 # 1: Cover on the left, info on the right
